# Archimedes

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  mypy.ini  pyproject.toml  tox.ini
ExampleSite/: archi.toml  site_config.py
archimedes/: __init__.py  __main__.py  archimedes.py  author.py  compile.py  errors.py  filediscovery.py  log.py  page.py  plugin.py  types.py
archimedes/command/: __init__.py  base.py  core.py  version.py
archimedes/compile/: __init__.py  markdown.py
archimedes/config/: __init__.py  default_config.py  runtime_config.py
archimedes/core/: filediscovery.py
archimedes/data/initial_structure/: README.md  cookiecutter.json
archimedes/data/initial_structure/{{cookiecutter.project_folder}}/: archi.toml  archi_config.py  site_config.py  theme_config.toml
archimedes/metadata/: __init__.py  base.py  meta_file.py
archimedes/utils/: path.py  version.py
docs/: index.md
docs/developer_notes/: doit_vs_own.md
tests/: conftest.py
tests/metadata/: test_meta_file.py
