[tool.poetry]
name = "archimedes"
version = "0.1.0"
description = "A Modern Static Site Generator"
authors = ["Jeppe Klitgaard <jeppe@dapj.dk>"]
license = "MIT"

[tool.poetry.scripts]
archi = "archimedes.__main__:run_cli"

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
Mako = "^1.1.4"
pydantic = {extras = ["email"], version = "^1.8.1"}
semver = "^2.13.0"
read-version = {extras = ["toml"], version = "^0.3.1"}
semantic-version = "^2.8.5"
doit = "^0.33.1"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^20.8b1"
mypy = "^0.812"
tox = "^3.23.0"
flake8 = "^3.9.0"
pytest = "^6.2.3"
pre-commit = "^2.12.0"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
combine_as_imports = true

known_first_party = ["archimedes"]

sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
    ]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
